--- a/dev.env
+++ b/dev.env
@@ -1,4 +1,4 @@
 NODE_ENV=development
-POSTGRES_USER="user"
-POSTGRES_PASSWORD="password"
-POSTGRES_DB="mydb"
+POSTGRES_USER="user_dev"
+POSTGRES_PASSWORD="password_dev"
+POSTGRES_DB="mydb_dev"
